--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ html {
 
 .resultPanel {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
   margin: 20px;
   border-top: 5px solid rgb(172, 172, 172);
   padding: 10px;
@@ -218,4 +218,13 @@ html {
   padding: 20px;
   overflow: initial;
   font-size: 20px;
+  display: grid;
+}
+
+.giphy {
+  grid-template-columns: 1fr;
+}
+
+.each-giphy {
+  margin-bottom: 20px;
 }
