--- a/css/style.css
+++ b/css/style.css
@@ -33,15 +33,14 @@
     grid-auto-rows: 1fr 1fr;
   }
   .resultPanel {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto; */
     margin: 20px;
     height: 200px;
-    overflow: scroll;
   }
 
-  .giphy .movie,
+  .movie,
   .giphy {
     display: block;
     position: relative;
@@ -256,7 +255,8 @@ html {
 
 .giphy,
 .movie {
-  padding: 20px;
+  padding: 100px 20px 20px 20px;
+  position: relative;
   overflow: initial;
   font-size: 20px;
   border: 4px solid rgba(59, 59, 59, 0.521);
@@ -264,6 +264,7 @@ html {
 }
 
 .giphy {
+  padding-top: 110px;
   display: grid;
   grid-template-columns: 1fr;
   color: rgb(218, 171, 42);
@@ -291,4 +292,36 @@ html {
   margin-bottom: 100px;
   padding: 15px;
   border: 5px solid rgb(46, 46, 46);
+}
+
+.favbtn {
+  width: 50px;
+  height: 50px;
+
+  color: white;
+  margin-bottom: 50px;
+  text-align: center;
+  background-color: transparent;
+  border: 3px solid white;
+}
+
+.favbtn:hover {
+  color: red;
+}
+
+#imdb-logo {
+  font-size: 65px;
+  position: absolute;
+  top: 20px;
+  left: 45%;
+}
+
+#giphy-logo {
+  position: absolute;
+  top: 20px;
+  left: 40%;
+}
+
+.each-rating {
+  margin-bottom: 0;
 }
